--- a/package.json
+++ b/package.json
@@ -39,5 +39,10 @@
   },
   "dependencies": {
     "random-useragent": "^0.5.0"
-  }
+  },
+  "keywords": [
+    "next",
+    "random",
+    "sample"
+  ]
 }
